--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "eslint ./app",
+    "lint:fix": "eslint ./app --fix"
   },
   "jest": {
     "preset": "jest-expo"
@@ -34,7 +36,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.7.0",
     "@types/react": "~18.2.45",
+    "eslint": "9.x",
+    "eslint-plugin-react": "^7.34.4",
+    "globals": "^15.8.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
