--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "eslint ./app",
-    "lint:fix": "eslint ./app --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "start": "bun run expo start",
+    "android": "bun run expo start --android",
+    "ios": "bun run expo start --ios",
+    "web": "bun run expo start --web",
+    "test": "bun run jest --watchAll",
+    "lint": "bun run eslint ./app",
+    "lint:fix": "bun run eslint ./app --fix",
+    "format": "bun run prettier --write .",
+    "format:check": "bun run prettier --check ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -19,7 +19,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.21",
+    "expo": "~51.0.31",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
@@ -27,8 +27,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "nativewind": "^2.0.11",
-    "react": "18.2.0",
+    "nativewind": "^4.1.23",
+    "react": "18.3.1",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-reanimated": "~3.10.1",
