--- a/package.json
+++ b/package.json
@@ -3,55 +3,59 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "bun run expo start",
-    "android": "bun run expo start --android",
-    "ios": "bun run expo start --ios",
+    "start": "EXPO_USE_FAST_RESOLVER=1 bunx expo start -c",
+    "android": "bun expo run:android",
+    "android:prebuild": "npx expo prebuild && bun expo run:android",
+    "ios": "bun expo run:ios",
+    "ios:prebuild": "npx expo prebuild && bun expo run:ios",
     "web": "bun run expo start --web",
     "test": "bun run jest --watchAll",
     "lint": "bun run eslint ./app",
     "lint:fix": "bun run eslint ./app --fix",
     "format": "bun run prettier --write .",
-    "format:check": "bun run prettier --check ."
+    "format:check": "bun run prettier --check .",
+    "clean": "rm -rf node_modules; rm -rf ios/build; rm -rf ios/build; rm -rf ios/Pods; rm -rf ios/Podfile.lock; rm -rf ~/Library/Developer/Xcode/DerivedData/",
+    "clean:hard": "rm -rf node_modules; rm bun.lock; rm -rf ios; rm -rf android; rm -rf ~/Library/Developer/Xcode/DerivedData/"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.31",
-    "expo-font": "~12.0.10",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.24",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/native": "^7.1.6",
+    "expo": "^53.0.9",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "nativewind": "^4.1.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.0.10",
     "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.34.4",
     "globals": "^15.8.0",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.4",
+    "jest-expo": "~53.0.5",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "~5.3.3",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^7.16.1"
   },
   "private": true
