:shirt::wrench: Lint/Config : Add eslint rules + enable new arch for iOS

--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "expo": {
+      "newArchEnabled": false
+    },
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
