--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
     },
     "plugins": ["expo-router", "expo-font", "expo-web-browser"],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "tsconfigPaths": true
     }
   }
 }
