--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "ios:prebuild": "npx expo prebuild && bun expo run:ios",
     "web": "bun run expo start --web",
     "test": "bun run jest --watchAll",
-    "lint": "bun run eslint ./app",
-    "lint:fix": "bun run eslint ./app --fix",
     "format": "bun run prettier --write .",
     "format:check": "bun run prettier --check .",
-    "clean": "rm -rf node_modules; rm -rf ios/build; rm -rf ios/build; rm -rf ios/Pods; rm -rf ios/Podfile.lock; rm -rf ~/Library/Developer/Xcode/DerivedData/"
+    "clean": "rm -rf node_modules; rm -rf ios/build; rm -rf ios/build; rm -rf ios/Pods; rm -rf ios/Podfile.lock; rm -rf ~/Library/Developer/Xcode/DerivedData/",
+    "lint": "eslint ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -22,9 +21,6 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.1.6",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "eslint-plugin-unused-imports": "^4.1.4",
     "expo": "^53.0.9",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
@@ -45,21 +41,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.7.0",
     "@types/react": "~19.0.10",
-    "eslint": "^9.27.0",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~9.2.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-perfectionist": "^4.1.2",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.8.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^7.16.1"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
