--- a/ios/Podfile
+++ b/ios/Podfile
@@ -60,5 +60,27 @@ target 'exponativewindtypescriptboilerplate' do
         end
       end
     end
+
+    # Fix for MMKV missing zlib symbols - add to all targets including main app
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['OTHER_LDFLAGS'] ||= ['$(inherited)']
+        unless config.build_settings['OTHER_LDFLAGS'].include?('-lz')
+          config.build_settings['OTHER_LDFLAGS'] << '-lz'
+        end
+      end
+    end
+
+    # Also add to main project targets
+    project = installer.aggregate_targets[0].user_project
+    project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['OTHER_LDFLAGS'] ||= ['$(inherited)']
+        unless config.build_settings['OTHER_LDFLAGS'].include?('-lz')
+          config.build_settings['OTHER_LDFLAGS'] << '-lz'
+        end
+      end
+    end
+    project.save
   end
 end
