--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-mmkv": "^3.2.0",
+    "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
