:sparkles: Integrate TanStack Query for Enhanced Data Fetching : Add TanStack Query (React Query) for efficient data fetching and state management. Update AGENTS.md with new features, examples, and configuration. Modify package.json and bun.lock to include TanStack Query dependencies. Update Android and iOS configurations for URL schemes. Enhance layout with QueryClientProvider for improved data handling.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
+        <data android:scheme="exp+expo-nativewind-typescript-boilerplate"/>
       </intent-filter>
     </activity>
   </application>
