--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.90.7",
     "expo": "^54.0.23",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.17",
