chore: bump fast-expo-app to v2.0.1

--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "template:android": "cd cli/templates/base && bun run android",
     "clean:cli": "cd packages/fast-expo-app && rm -rf node_modules dist",
     "clean:www": "cd www && rm -rf node_modules .next",
-    "clean:template": "cd cli/templates/base && rm -rf node_modules .expo ios/build ios/Pods android/build"
+    "clean:template": "cd cli/templates/base && rm -rf node_modules .expo ios/build ios/Pods android/build",
+    "publish:patch": "cd packages/fast-expo-app && bun run publish:patch",
+    "publish:minor": "cd packages/fast-expo-app && bun run publish:minor",
+    "publish:major": "cd packages/fast-expo-app && bun run publish:major"
   },
   "prettier": {
     "semi": true,
