feat: add README.md for fast-expo-app and include it in package.json

--- a/packages/fast-expo-app/package.json
+++ b/packages/fast-expo-app/package.json
@@ -46,7 +46,8 @@
     "dist",
     "bin",
     "templates",
-    "modules"
+    "modules",
+    "README.md"
   ],
   "type": "module",
   "dependencies": {
