--- a/cli/templates/base/package.json
+++ b/cli/templates/base/package.json
@@ -27,49 +27,54 @@
     }
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "^5.90.7",
-    "expo": "^54.0.23",
-    "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.17",
-    "expo-font": "~14.0.9",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.14",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.9",
-    "nativewind": "^4.1.23",
+    "@expo/vector-icons": "15.0.3",
+    "@react-navigation/bottom-tabs": "7.4.0",
+    "@react-navigation/elements": "2.6.3",
+    "@react-navigation/native": "7.1.8",
+    "@tanstack/react-query": "5.90.7",
+    "@tanstack/react-query-persist-client": "5.90.7",
+    "@tanstack/query-sync-storage-persister": "5.90.7",
+    "expo": "54.0.31",
+    "expo-constants": "18.0.10",
+    "expo-dev-client": "6.0.17",
+    "expo-font": "14.0.9",
+    "expo-linking": "8.0.11",
+    "expo-router": "6.0.14",
+    "expo-splash-screen": "31.0.10",
+    "expo-status-bar": "3.0.8",
+    "expo-system-ui": "6.0.8",
+    "expo-web-browser": "15.0.9",
+    "nativewind": "4.1.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-mmkv": "^4.0.0",
-    "react-native-nitro-modules": "^0.31.5",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-unistyles": "^2.8.0",
-    "react-native-web": "^0.21.0",
+    "react-native-mmkv": "4.0.0",
+    "react-native-nitro-modules": "0.32.0",
+    "react-native-reanimated": "4.1.1",
+    "react-native-safe-area-context": "5.6.0",
+    "react-native-screens": "4.16.0",
+    "react-native-unistyles": "3.0.21",
+    "react-native-web": "0.21.0",
     "react-native-worklets": "0.5.1",
-    "zustand": "^5.0.2"
+    "zustand": "5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@types/react": "~19.1.10",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "~10.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-perfectionist": "^4.1.2",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "globals": "^15.8.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~54.0.13",
-    "prettier": "^3.5.3",
+    "@babel/core": "7.26.0",
+    "@dev-plugins/react-native-mmkv": "0.4.0",
+    "@types/react": "19.1.10",
+    "eslint": "8.57.0",
+    "eslint-config-expo": "10.0.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-perfectionist": "4.1.2",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "globals": "15.8.0",
+    "jest": "29.2.1",
+    "jest-expo": "54.0.13",
+    "prettier": "3.5.3",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "~5.9.2"
+    "typescript": "5.9.2"
   },
   "private": true
 }
